--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -10,8 +10,8 @@
     <%= f.text_field :artist %>
   </p>
   <p>
-    <%= f.label :artist %><br>
-    <%= f.text_field :artist %>
+    <%= f.label :title %><br>
+    <%= f.text_field :title %>
   </p>
   <p>
     <%= f.label :url %><br>
