--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,24 @@
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
+
+  <div class="userinfo">
+    <% if current_user %>
+      <p>
+        Hello <%= current_user.email %>.
+        |
+        <%= link_to "Logout", sessions_path, method: :delete %>
+      </p>
+      <% else %>
+      <p>
+        <%= link_to "New Account", new_users_path %>
+        |
+        <%= link_to "Log In", new_sessions_path %>
+      </p>
+      <% end %>
+  </div>
 
 <%= yield %>
 
