--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,18 +1,24 @@
+
 <h1> Most recent pictures </h1>
 <%= link_to("New Picture", "/pictures/new") %>
 
-<div class="2018">
+<div class="photos">
 <h1> 2018, <%= @twenty_eighteen.count %> photos </h1>
   <% @twenty_eighteen.each do |picture| %>
+  <div class="photo">
+
   <p><%= picture.title%>, <%= picture.artist %></p>
   <%= link_to(image_tag(picture.url), "/pictures/#{picture.id}" ) %>
-  <% end%>
 </div>
+  <% end%>
 
-<div class="2017">
   <h1> 2017, <%= @twenty_seventeen.count %>, photos </h1>
+
   <% @twenty_seventeen.each do |picture| %>
+  <div class="photo">
   <p><%= picture.title %>, <%= picture.artist %> </p>
   <%= link_to(image_tag(picture.url), "/pictures/#{picture.id}") %>
+  </div>
   <% end %>
+
 </div>
